# KanjiHelper

./: README.md  pyproject.toml  start_cmd.bat
src/: main.py
src/data/: kanji_lists.json  user_kanji.json
src/kanji_helper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ui/: footer.py  gallery.py  header.py  importer.py  inputs.py  kanji_sets.py  menu.py
src/utils/: constants.py
